# substrate-stencil

./: .gitignore  Cargo.toml  README.md
client/consensus/babe/: Cargo.toml
client/consensus/babe/rpc/: Cargo.toml
client/consensus/babe/rpc/src/: lib.rs
client/consensus/babe/src/: authorship.rs  aux_schema.rs  lib.rs  migration.rs  rpc.rs  rpc_server.rs  tests.rs  verification.rs
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/babe/: Cargo.toml
pallets/babe/src/: equivocation.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
primitives/consensus/babe/: Cargo.toml
primitives/consensus/babe/src/: digests.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
