[package]
name = "node-template"
authors = ["{{authors}}"]
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/substrate-stencil'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
hex-literal = "0.3.1"

# local dependencies
node-template-runtime = { path = '../runtime', version = '2.0.1' }

# Substrate dependencies
frame-benchmarking = '2.0.1'
frame-benchmarking-cli = '2.0.1'
pallet-im-online = '2.0.1'
pallet-staking = '2.0.1'
pallet-transaction-payment-rpc = '2.0.1'
sc-basic-authorship = '0.8.1'
sc-cli = { features = ['wasmtime'], version = '0.8.1' }
sc-client-api = '2.0.1'
sc-consensus = '0.8.1'
sc-consensus-babe = '0.8.1'
sc-consensus-babe-rpc = '0.8.1'
sc-consensus-epochs = '0.8.1'
sc-executor = { features = ['wasmtime'], version = '0.8.1' }
sc-keystore = '2.0.1'
sc-network = '0.8.1'
sc-rpc = '2.0.1'
sc-rpc-api = '0.8.1'
sc-service = { features = ['wasmtime'], version = '0.8.1' }
sc-transaction-pool = '2.0.1'
sp-api = '2.0.1'
sp-block-builder = '2.0.1'
sp-blockchain = '2.0.1'
sp-consensus = '0.8.1'
sp-consensus-babe = '0.8.1'
sp-core = '2.0.1'
sp-inherents = '2.0.1'
sp-runtime = '2.0.1'
sc-telemetry = '2.0.1'
sp-transaction-pool = '2.0.1'
substrate-frame-rpc-system = '2.0.1'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
