[package]
name = "node-template-runtime"
authors = ["{{authors}}"]
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/substrate-stencil'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
static_assertions = "1.1.0"

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.1' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
frame-executive = { default-features = false, version = '2.0.1' }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.1' }
pallet-authorship = { default-features = false, version = '2.0.1' }
pallet-babe = { default-features = false, version = '2.0.1' }
pallet-balances = { default-features = false, version = '2.0.1' }
pallet-im-online = { default-features = false, version = '2.0.1' }
pallet-offences = { default-features = false, version = '2.0.1' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.1' }
pallet-session = { default-features = false, version = '2.0.1', features = ['historical'] }
pallet-staking = { default-features = false, version = '2.0.1' }
pallet-staking-reward-curve = { default-features = false, version = '2.0.1' }
pallet-sudo = { default-features = false, version = '2.0.1' }
pallet-utility = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
pallet-transaction-payment = { default-features = false, version = '2.0.1' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.1' }
pallet-treasury = { default-features = false, version = '2.0.1' }
pallet-collective = { default-features = false, version = '2.0.1' }
pallet-elections-phragmen = { default-features = false, version = '2.0.1' }
pallet-membership = { default-features = false, version = '2.0.1' }
pallet-democracy = { default-features = false, version = '2.0.1' }
pallet-scheduler = { default-features = false, version = '2.0.1' }
sp-api = { default-features = false, version = '2.0.1' }
sp-block-builder = { default-features = false, version = '2.0.1' }
sp-consensus-babe = { default-features = false, version = '0.8.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-inherents = { default-features = false, version = '2.0.1' }
sp-offchain = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-session = { default-features = false, version = '2.0.1' }
sp-staking = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-transaction-pool = { default-features = false, version = '2.0.1' }
sp-version = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
	'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-im-online/std',
	'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
	'pallet-session/std',
	'pallet-staking/std',
    'pallet-sudo/std',
	'pallet-utility/std',

    'pallet-template/std',

    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'pallet-membership/std',
    'pallet-democracy/std',
    'pallet-scheduler/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
