[package]
name = "sc-consensus-babe"
version = "0.8.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "BABE consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-consensus-babe"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
sp-consensus-babe = { version = "0.8.1", path = "../../../primitives/consensus/babe" }
sp-core = { version = "2.0.0" }
sp-application-crypto = { version = "2.0.0" }
num-bigint = "0.2.3"
num-rational = "0.2.2"
num-traits = "0.2.8"
serde = { version = "1.0.104", features = ["derive"] }
sp-version = { version = "2.0.0" }
sp-io = { version = "2.0.0" }
sp-inherents = { version = "2.0.0" }
sp-timestamp = { version = "2.0.0" }
sc-telemetry = { version = "2.0.0" }
sc-keystore = { version = "2.0.0" }
sc-client-api = { version = "2.0.0" }
sc-consensus-epochs = { version = "0.8.0" }
sp-api = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }
sp-consensus = { version = "0.8.0" }
sp-consensus-vrf = { version = "0.8.0" }
sc-consensus-uncles = { version = "0.8.0" }
sc-consensus-slots = { version = "0.8.0" }
sp-runtime = { version = "2.0.0" }
sp-utils = { version = "2.0.0" }
fork-tree = { version = "2.0.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0"}
futures = "0.3.4"
futures-timer = "3.0.1"
parking_lot = "0.10.0"
log = "0.4.8"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated"] }
rand = "0.7.2"
merlin = "2.0"
pdqselect = "0.1.0"
derive_more = "0.99.2"
retain_mut = "0.1.1"

jsonrpc-core = "17.0.0"
jsonrpc-derive = "17.0.0"
jsonrpc-pubsub = "17.0.0"
jsonrpc-ws-server = "17.0.0"
serde_json = "1.0.64"

[dev-dependencies]
sp-keyring = { version = "2.0.0" }
sp-tracing = { version = "2.0.0" }
sc-executor = { version = "0.8.0" }
sc-network = { version = "0.8.0" }
#sc-network-test = { version = "0.8.0" }
sc-service = { version = "0.8.0", default-features = false }
#substrate-test-runtime-client = { version = "2.0.0" }
sc-block-builder = { version = "0.8.0" }
rand_chacha = "0.2.2"
tempfile = "3.1.0"

[features]
test-helpers = []
